# SmartHome

./: README.md
home/: CMakeLists.txt  sdkconfig  sdkconfig.old
home/main/: CMakeLists.txt  beep.c  beep.h  common.h  device_fan.c  device_fan.h  device_light.c  device_light.h  devices.c  devices.h  dht_sensor.c  dht_sensor.h  handle_message.c  handle_message.h  key_driver.c  key_driver.h  light_sensor.c  light_sensor.h  main.c  mqtt.c  mqtt.h  room.c  room.h  sensors.c  sensors.h  ssd1306.c  ssd1306.h  su03t.c  su03t.h  wifi_connect.c  wifi_connect.h
smart-home-system/: pom.xml
smart-home-system/model/: pom.xml
smart-home-system/model/src/main/java/com/example/bean/entity/: Device.java  Preference.java  Room.java  Sensor.java  Threshold.java
smart-home-system/model/src/main/java/com/example/bean/repository/: DeviceRepository.java  PreferenceRepository.java  RoomRepository.java  SensorRepository.java  ThresholdRepository.java
smart-home-system/services/: pom.xml
smart-home-system/services/smart-home-bpmn/: pom.xml
smart-home-system/services/smart-home-bpmn/src/main/resources/: application.yml
smart-home-system/services/smart-home-bpmn/src/main/resources/processes/: home-modes.bpmn20.xml
smart-home-system/services/smart-home-manage/: pom.xml
smart-home-system/services/smart-home-manage/src/main/resources/static/: index.html  preferenceManagement.html  roomData.html  thresholdManagement.html
smart-home-system/services/smart-home-mqtt/: pom.xml
文档/: 语音模块指令设计.md
文档/后端接口文档/: Device.md  Preference.md  Room.md  Threshold.md
(+29 files in other folders)
