idf_component_register(SRCS  "su03t.c" "room.c"
                             "key_driver.c" "beep.c"
                             "devices.c" "device_light.c" "device_fan.c" 
                             "sensors.c" "dht_sensor.c" "light_sensor.c" 
                             "wifi_connect.c" "mqtt.c" "handle_message.c"
                             "main.c" "ssd1306.c"
                            INCLUDE_DIRS ".")
